# goodboi

./: Cargo.toml  README.md
i-remember-structs/: Cargo.toml
i-remember-structs/src/: lib.rs  types.rs
server/: .env  Cargo.toml  Dockerfile  docker-compose.yml
server/migrations/: 0001_remember_entities_table.sql
server/src/: lib.rs  main.rs
src/: main.rs
src/app/: app_entity.rs  mod.rs
src/cli/: args.rs  commands.rs  init.rs  mod.rs
src/remember/: mod.rs  remember_entity.rs
src/structs/: mod.rs
src/utils/: consts.rs  fs_utils.rs  mod.rs
templates/: .goodboi.toml  base.toml
