[package]
name = "i-remember"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
chrono = "0.4.22"
colorize = "0.1.0"
rand = "0.8.5"
clap = { version = "4.4.18", features = ["derive"] }
strsim = "0.11.0"
tokio = {version = "1.36.0", features = ["full"]}
dotenv = "0.15.0"
uuid = {version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"]}

[dependencies.i-remember-structs]
path = "i-remember-structs"