[package]
name = "goodboi"
version = "0.1.0"
edition = "2021"
authors = ["yellowhatpro"]
description = "Project management on steroids"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.40", features = ["serde"] }
colorize = "0.1.0"
rand = "0.9.0"
clap = { version = "4.5.35", features = ["derive", "env"] }
strsim = "0.11.0"
tokio = { version = "1.36.0", features = ["full"] }
anyhow = { version = "1.0.75", default-features = false, features = ["backtrace", "std"] }
log = "0.4"
env_logger = "0.11"
inquire = "0.6"