[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0"
tokio = {version = "1.36.0", features = ["full"]}
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "sqlx-postgres" ] }
dotenvy = "0.15.7"

[dependencies.i-remember-structs]
path = "../i-remember-structs"